finish refactoring kafka comm provider, refactor data feed driver